--- a/style.css
+++ b/style.css
@@ -3,3 +3,13 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: "Lexend Deca", sans-serif;
+}
+
+.container  {
+    max-width: 1150px;
+    margin: auto;
+    width: 90%;
+}
