--- a/style.css
+++ b/style.css
@@ -113,3 +113,45 @@ Header Media Queries
     
 }
 }
+
+
+/* 
+
+showcase
+
+*/
+
+.showcase-container {
+    background-color: #ffe9d4;
+    width: 100%;
+    height: 700px;
+}
+
+.showcase-content-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.showcase-header {
+    font-size: 43px;
+    line-height: 1.2;
+    margin-bottom: 1rem;
+}
+
+.subheading-header {
+    line-height: 1.7;
+    margin-bottom: 1rem;
+}
+
+.cta-text {
+    font-size: 12px;
+    margin-top: 1rem;
+}
+
+.image-itself {
+    width: 700px;
+    margin-top: 7rem;
+    m
+}
