--- a/style.css
+++ b/style.css
@@ -216,5 +216,12 @@ Logo section Media Queries
 @media screen and (max-width: 743px) {
   .img-container {
     flex-direction: column;
+    margin: 0 auto;
   }
+
+  .image-itself {
+  width: 80%;
+  padding: 0;
+  
+}
 }
