--- a/style.css
+++ b/style.css
@@ -225,3 +225,79 @@ Logo section Media Queries
   
 }
 }
+
+/* 
+
+desktop features section
+
+*/
+
+.desktop-features {
+  background-color: rgb(216, 245, 255);
+  width: 100%;
+  height: 1400px;
+}
+
+.content-container {
+  display: grid;
+  grid-template-columns: repeat(2,3fr);
+  padding-top: 2rem;
+  column-gap: 2rem;
+}
+
+.features-img {
+  width: 600px;
+  margin-bottom: 3rem;
+}
+
+.text-feature-header {
+  margin: 1rem 0;
+}
+
+.text-feature-description {
+  line-height: 2.2;
+}
+
+.features-link-text {
+  margin-top: 2rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+/* 
+
+Media Queries desktop section
+
+*/
+
+@media screen and (max-width:1315px) {
+  .content-container {
+  display: flex;
+ flex-direction: column;
+ align-items: center;
+}
+
+.desktop-features {
+  height: 2800px;
+}
+
+.features-img {
+  width: 400px;
+  margin-bottom: 3rem;
+}
+
+.text-feature-header {
+  text-align: center;
+}
+
+.text-feature-description {
+  text-align: center;
+  width: 50%;
+  margin: 0 auto;
+}
+
+.features-link-text {
+  text-align: center;
+}
+
+}
