--- a/style.css
+++ b/style.css
@@ -369,6 +369,115 @@ h2 {
    column-gap: 3rem;
 }
 
+/* 
+
+footer
+
+*/
+
+footer {
+  background-color: #1e2a37;
+  width: 100%;
+  height: 600px;
+}
+
+
+.footer-content-container {
+  padding-top: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: white;
+}
+
+.footer-text {
+  width: 650px;
+}
+
+.footer-text-p {
+  margin-top: -1rem;
+  margin-bottom: 1rem;
+}
+
+.footer-more-info {
+  margin-top: .7rem;
+  line-height: 2.2;
+}
+
+.list-items-footer {
+  border: solid white 2px;
+  padding: .9rem 0.9rem;
+  margin: 0.5rem;
+  border-radius: 8px;
+  cursor: pointer;
+  flex-shrink: 0;
+}
+
+.list-background-get-started-footer {
+  background-color: white;
+  border: none;
+}
+
+.list-background-get-started-footer:hover {
+  background-color: #36adb3;
+}
+
+.list-background-demo-footer:hover {
+  background-color: #0bb3bc;
+}
+
+
+.list-items-link-footer {
+  padding: 0.4rem;
+  text-decoration: none;
+}
+
+.get-started-header-footer {
+  color: #053b3e;
+  font-weight: 500;
+  font-size: 17px;
+}
+
+.get-demo-header-footer {
+  color: white;
+  font-size: 17px;
+  font-weight: 500;
+}
+
+
+.footer-link {
+  color: skyblue;
+}
+
+.footer-img {
+  width: 350px;
+}
+
+
+.footer-copyright {
+  text-align: center;
+  color: #4d5555;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+}
+
+
+
+
+
+.footer-white-links {
+  display: flex;
+  list-style: none;
+  column-gap: 50px;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+.footer-white-link-anchor {
+  color: #d8d8d8;
+}
+
 
 @media screen and (max-width:726px) { 
 .desktop-features {
